# TCM_Knowledge_Base

./: .gitattributes  .gitignore  00 - Anki Flashcard Notes & Ideas.md  00 - things to fix.md  Academic Dashboard Test.md  BUFFERING_FIX_COMPLETE.md  Blood Stagnation Huang Di.md  Blood Stagnation usable quotes.md  CAPSULE_CORRECTED_WORKFLOW.md  CAPSULE_FINAL_SUMMARY.md  CAPSULE_PATTERN_CREATION_RECOVERY.md  CAPSULE_PROGRESS_UPDATE.md  CAPSULE_RECOVERY_COMPLETE.md  CAPSULE_RESTORED_FEATURES.md  CAPSULE_WORKFLOW_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETE_PROGRESS_TRACKING.md  CONTENT_GENERATION_SYSTEM_COMPLETE.md  CONTRIBUTING.md  DISPLAY_SPAM_FIX.md  FINAL_SOLUTION.md  FLASHCARD_PROJECT_COMPLETE.md  FORMATTING_CLEANUP_COMPLETE.md  FORMULA_EXTRACTION_SUMMARY.md  FRONTMATTER_AUDIT_REPORT.md  GIT_VS_CURRENT_COMPARISON.md  GUIDED_CONVERSATION_COMPLETE.md  Integrative Clinical Medicine Week 10.md  LICENSE  Module 6 Acu Prescriptions.md  OCD Advisory Notes.md  PATTERN_ANALYSIS_REPORT.md  PROGRESS_BAR_UPDATE.md  PROGRESS_FIX_QUICKREF.md  QUICKSTART_GUIDED_CONVERSATION.md  README.md  RECOVERY_PLAN.md  SLIDES_GENERATION_COMPLETE.md  Student Dashboard.md  Testdeckfashca.md  (+19 more)
.github/: ISSUE_TEMPLATE.md
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  types.json  workspace.json  workspaces.json
Board Exams/: README.md  Recommended_Reading_Bibliography.md  Sample_Questions_Bank.md
Books/: Chinese Acupuncture and Moxibustion (Xinnong).md
Documents/: ADVANCED_FEATURES_Examples_BACKUP.md  AUTOMATED_SYMPTOM_LINKING.md  ORGANIZATION_COMPLETE.md  SLIDES_INDEX.md  SLIDES_PROJECT_SUMMARY.md  SLIDE_TEMPLATE_STRUCTURE.md  SYMPTOM_STANDARDIZATION_FINAL_REPORT.md  SYMPTOM_STANDARDIZATION_REVIEW.md  SYSTEM_AUDIT_AND_IMPROVEMENTS.md  UPDATES_SUMMARY.md  symptom_standardization_plan.md  symptom_standardization_report_20251024_225830.md  symptom_standardization_report_20251024_230434.md  symptom_standardization_report_20251024_231204.md  symptom_standardization_report_20251024_231323.md  symptom_standardization_report_20251024_231610.md
Flashcards/: FLASHCARD_SYSTEM_SUMMARY.md  QUICK_START.md  README.md
OCDS_Documentation/: 00_DOCUMENTATION_INDEX.md  DASHBOARD_FIXES_SESSION_3.md  FIXES_APPLIED_SESSION_2.md  PROJECT_VISION_AND_ROADMAP.md  READONLY_SESSION_FINDINGS.md  SESSION_3_COMPLETE.md
Research/: LASERS.md
TCM_Concepts/: Auscultation_and_Olfaction.md  Ch43_Pathogenic_Factors_Guide.md  Ch44_Six_Stages_Theory_Guide.md  Ch45_Four_Levels_Theory_Guide.md  Ch46_Three_Burners_Theory_Guide.md  Ch47_12_Channels_Guide.md  Ch48_Eight_Extraordinary_Vessels_Guide.md  Ch49_Five_Elements_Guide.md  Cold.md  Cold_and_Heat.md  Damp.md  Deficiency_and_Excess.md  Dryness.md  Exterior_and_Interior.md  Fire.md  Inspection.md  Palpation.md  Phlegm_Fluid.md  Wind.md  (+9 more)
(+3566 files in other folders)
