[project]
name = "capsule-learn"
version = "0.1.0"
description = "AI-powered learning assistant for TCM studies"
readme = "README.md"
authors = [
  {name = "TCM Knowledge Base", email = "bmad@example.com"}
]
maintainers = [
  {name = "TCM Knowledge Base", email = "bmad@example.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "python-frontmatter",
  "click>=8.0.0",
  "rich>=13.0.0",
  "pyyaml>=6.0",
  "google-generativeai>=0.3.0",
  "questionary>=2.0.0",
  "ruamel.yaml>=0.17.0",
  "semver",
  "jinja2",
  "chardet",
  "jsonschema",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage[toml]",  # testing with TOML support
    "pytest",  # testing
    "pytest-cov",  # coverage integration for pytest
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/BigSpoon33/obsidian_capsule_cli/issues"
changelog = "https://github.com/BigSpoon33/obsidian_capsule_cli/blob/master/changelog.md"
homepage = "https://github.com/BigSpoon33/obsidian_capsule_cli"

[project.scripts]
capsule = "capsule.cli:main"
cap = "capsule.cli:main"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=capsule --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: marks tests as end-to-end tests (slower, full workflows)",
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (moderate speed)",
]

[tool.coverage.run]
source = ["capsule"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
    "*/__init__.py",
    "capsule/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 60.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.uv]
package = true
